# python-sdk

./: .gitignore  README.md  pyproject.toml  setup.py
botanalytics/: .env  __init__.py  amazon.py  facebook.py  generic.py  google.py  rasa.py  slack.py  universal.py  util.py
tests/: __init__.py
